--- a/pom.xml
+++ b/pom.xml
@@ -135,7 +135,14 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.21.0</version>
+                <version>2.22.0</version>
+                <dependencies>
+                 <dependency>
+                     <groupId>org.junit.platform</groupId>
+                     <artifactId>junit-platform-surefire-provider</artifactId>
+                     <version>1.1.0</version>
+                 </dependency>
+                </dependencies>
             </plugin>
 		<!-- CODE COVERAGE -->
 		    <plugin>
@@ -158,7 +165,7 @@
 		                </goals>
 		            </execution>
 		        </executions>
-		</plugin>
+		    </plugin>
         </plugins>
     </build>
 	<repositories>
