--- a/pom.xml
+++ b/pom.xml
@@ -137,11 +137,12 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.0</version>
                 <dependencies>
-                 <dependency>
-                     <groupId>org.junit.platform</groupId>
-                     <artifactId>junit-platform-surefire-provider</artifactId>
-                     <version>1.1.0</version>
-                 </dependency>
+                     <dependency>
+                        <groupId>junit</groupId>
+                        <artifactId>junit</artifactId>
+                        <version>4.11</version>
+                        <scope>test</scope>
+                    </dependency>
                 </dependencies>
             </plugin>
 		<!-- CODE COVERAGE -->
