--- a/StagePipeline/Jenkinsfile
+++ b/StagePipeline/Jenkinsfile
@@ -22,6 +22,9 @@ pipeline{
         NEXUS_LOGIN ='nexuslogin'
         SONARSERVER= 'sonarserver'
         SONARSCANNER= 'sonarscanner'
+        registryCredential= 'ecr:us-east-1:awscreds'
+        appRegistry ='117202449428.dkr.ecr.us-east-1.amazonaws.com/vprofile-img'
+        vprofileRegistry = 'https://117202449428.dkr.ecr.us-east-1.amazonaws.com'
 
     }
 
@@ -100,6 +103,24 @@ pipeline{
                 )
             }
         
+        }
+        stage('Build app image'){
+            steps{
+                script{
+                    dockerImage = docker.build(appRegistry + ':$BUILD_NUMBER', "./Docker-files/app/multistage/")
+                }
+            }
+        }
+
+        stage('Upload App Image'){
+            steps{
+                script{
+                    docker.withRegistry(vprofileRegistry, registryCredential){
+                        dockerImage.push("$BUILD_NUMBER")
+                        dockerImage.push('latest')
+                    }
+                }
+            }
         }
     }
     post{
